--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <span class="material-symbols-outlined">menu</span>
 </div>
 <h2 class="text-primary text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">
-    الواحة لخدمات النظافة</h2>
+    آلاء لخدمات النظافة</h2>
 <div class="flex w-12 items-center justify-end">
 <button class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-12 bg-transparent text-[#0d141b] dark:text-white gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0">
 <span class="material-symbols-outlined">person</span>
